# python-netenum

./: __main__.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml
src/netenum/: __init__.py  __main__.py  core.py
tests/: test_cli.py  test_core.py
