[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netenum"
version = "1.0.0"
description = "Efficient IP address enumerator that interpolates across IPv4 and IPv6 CIDR ranges"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Paige Thompson", email = "paige@paige.bio" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
dependencies = [
    "ipaddress; python_version < '3.7'"  # Built into Python 3.7+
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "pylint>=3.0.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.7"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pylint]
max-line-length = 88
disable = [
    "C0111",  # missing-docstring (handled by flake8-docstrings)
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name (for short variable names)
]
good-names = ["i", "j", "k", "ex", "Run", "_", "ip"]
ignore = ["CVS", ".git", ".pytest_cache", "build", "dist"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]  # for black compatibility
per-file-ignores = [
    "__init__.py:F401",  # ignore unused imports in __init__.py
]
docstring-convention = "google"
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]

[project.urls]
Homepage = "https://github.com/paigeadelethompson/python-netenum"
Repository = "https://github.com/paigeadelethompson/python-netenum.git"

[tool.hatch.build.targets.wheel]
packages = ["src/netenum"] 